--- a/career.html
+++ b/career.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IT Wings Career Page</title>
+    <title>path to IT wings</title>
 
     <!-- Main CSS File -->
     <link rel="stylesheet" href="css/main.css" />
@@ -53,7 +53,7 @@
               </ul>
             </div>
             <div class="contact-btn">
-              <a href="contact.html" target="_blank">Get in touch</a>
+              <a href="request.html" target="_blank">Get in touch</a>
             </div>
           </div>
         </div>
@@ -144,6 +144,7 @@
               <li><a href="request.html">Request a Service</a></li>
               <li><a href="about.html">Know About Us</a></li>
               <li><a href="jobs.html">Join Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
               <li><a href="#">Learn With Us</a></li>
             </ul>
           </div>
@@ -288,12 +289,12 @@
     <footer class="footer">
       <div class="footer-cta">
         <div class="container">
-          <h2>Join Our Journey of Innovation</h2>
+          <h2>Ready to work with us?</h2>
           <p>
-            Be a part of IT Wings Webtech Solutions and experience how we’re
-            transforming businesses through technology, passion, and creativity.
+            Join us to experience cutting-edge industrial solutions that drive
+            innovation and lasting success.
           </p>
-          <a href="contact.html" class="btn-primary">Get in Touch</a>
+          <a href="request.html" class="btn-primary">Get in Touch</a>
         </div>
       </div>
 
@@ -303,13 +304,12 @@
           <div class="footer-col about">
             <img
               src="images/service-banner.jpg"
-              alt="IT Wings Logo"
+              alt="ProFactory Logo"
               class="footer-logo"
             />
             <p>
-              IT Wings Webtech Solutions delivers tailored IT services and
-              digital transformation solutions to help businesses innovate and
-              grow in the modern age.
+              We are committed to providing personalized industrial solutions
+              that transform your business.
             </p>
             <div class="social-icons">
               <a href="#" target="_blank"
@@ -339,11 +339,11 @@
 
           <!-- Legal -->
           <div class="footer-col">
-            <h4>Resources</h4>
+            <h4>Security</h4>
             <ul>
               <li><a href="#">Terms & Conditions</a></li>
               <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Help Center</a></li>
+              <li><a href="#">Help</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
@@ -354,13 +354,11 @@
             <ul class="contact-info">
               <li><a href="tel:+91123654789">+91 123654789</a></li>
               <li>
-                <a href="mailto:info@itwingswebtech.com"
-                  >info@itwingswebtech.com</a
-                >
+                <a href="mailto:info@domainname.com">info@domainname.com</a>
               </li>
               <li>
                 <a href="https://goo.gl/maps/XYZ" target="_blank"
-                  >Stesalit Tower, Sector V, Kolkata</a
+                  >520, West Valley, Amin and Minim</a
                 >
               </li>
             </ul>
@@ -369,7 +367,7 @@
       </div>
 
       <div class="footer-bottom">
-        <p>&copy; 2025 IT Wings Webtech Solutions. All Rights Reserved.</p>
+        <p>&copy; 2025 IT-Wings Webtech Solutions. All Rights Reserved.</p>
       </div>
     </footer>
 
