--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IT Wings Webtech Solutions</title>
+    <title>Connect in touch with us</title>
 
     <!-- font awesome -->
     <link
@@ -61,7 +61,7 @@
               </ul>
             </div>
             <div class="contact-btn">
-              <a href="contact.html" target="_blank">Get in touch</a>
+              <a href="request.html" target="_blank">Get in touch</a>
             </div>
           </div>
         </div>
@@ -152,6 +152,7 @@
               <li><a href="request.html">Request a Service</a></li>
               <li><a href="about.html">Know About Us</a></li>
               <li><a href="jobs.html">Join Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
               <li><a href="#">Learn With Us</a></li>
             </ul>
           </div>
@@ -172,77 +173,143 @@
     </section>
 
     <main class="contact-page">
-      <!-- ===== Contact Details & Form Section ===== -->
-      <section class="contact-details-section">
+      <!-- ===== Contact Header ===== -->
+      <section class="contact-header">
         <div class="container">
-          <div class="contact-details-wrapper">
-            <!-- Left Side: Contact Information -->
-            <div class="contact-info">
-              <h2>Get in Touch</h2>
+          <h1>Let's Connect</h1>
+          <p>
+            Have questions, collaboration ideas, or need support? We’re always
+            here to help you at IT Wings WebTech.
+          </p>
+          <a href="request.html" class="cta-btn">Request a Service</a>
+        </div>
+      </section>
+
+      <!-- ===== Contact Info Section ===== -->
+      <section class="contact-info-section">
+        <div class="container contact-grid">
+          <div class="contact-card">
+            <i class="fa-solid fa-phone"></i>
+            <h3>Phone</h3>
+            <p><a href="tel:+911234567890">+91 1234567890</a></p>
+            <span>Mon–Sat (10am – 7pm)</span>
+          </div>
+
+          <div class="contact-card">
+            <i class="fa-solid fa-envelope"></i>
+            <h3>Email</h3>
+            <p>
+              <a href="mailto:info@itwingswebtech.com"
+                >info@itwingswebtech.com</a
+              >
+            </p>
+            <span>We reply within 24 hours</span>
+          </div>
+
+          <div class="contact-card">
+            <i class="fa-solid fa-location-dot"></i>
+            <h3>Office</h3>
+            <p>Stesalit Tower, Sector V, Kolkata</p>
+            <span>Visit with prior appointment</span>
+          </div>
+
+          <div class="contact-card">
+            <i class="fa-solid fa-briefcase"></i>
+            <h3>Business Enquiries</h3>
+            <p>
+              <a href="mailto:business@itwings.com">business@itwings.com</a>
+            </p>
+            <span>For partnerships & collaborations</span>
+          </div>
+        </div>
+      </section>
+
+      <!-- ===== Social Bar ===== -->
+      <section class="contact-social">
+        <div class="container">
+          <h2>Connect With Us Online</h2>
+          <div class="social-links-large">
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+          </div>
+        </div>
+      </section>
+
+      <!-- ===== Why Choose Us Section ===== -->
+      <section class="why-choose-us">
+        <div class="container">
+          <div class="section_wrapper">
+            <div class="section-header">
+              <h2>Why Choose <span>Us</span></h2>
               <p>
-                Whether you have a question, a business inquiry, or a
-                collaboration idea — our team is always ready to connect and
-                assist you.
+                Empowering businesses with cutting-edge IT solutions,
+                innovation, and dedicated support.
               </p>
-
-              <div class="info-item">
-                <i class="fa-solid fa-phone"></i>
-                <div>
-                  <h4>Phone</h4>
-                  <p><a href="tel:+911234567890">+91 1234567890</a></p>
-                </div>
-              </div>
-
-              <div class="info-item">
-                <i class="fa-solid fa-envelope"></i>
-                <div>
-                  <h4>Email</h4>
-                  <p>
-                    <a href="mailto:info@itwingswebtech.com"
-                      >info@itwingswebtech.com</a
-                    >
-                  </p>
-                </div>
-              </div>
-
-              <div class="info-item">
-                <i class="fa-solid fa-location-dot"></i>
-                <div>
-                  <h4>Office Address</h4>
-                  <p>Stesalit Tower, Sector V, Kolkata, India</p>
-                </div>
-              </div>
-
-              <div class="social-links">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-              </div>
             </div>
 
-            <!-- Right Side: Contact Form -->
-            <div class="contact-form-box">
-              <h2>Send a Message</h2>
-              <form class="contact-form">
-                <div class="form-row">
-                  <input type="text" placeholder="Full Name*" required />
-                  <input type="email" placeholder="Email Address*" required />
-                </div>
+            <div class="home-choose-grid">
+              <!-- Card 1 -->
+              <div class="choose-card">
+                <i class="fas fa-code"></i>
+                <h3>Expert Developers</h3>
+                <p>
+                  Our experienced developers deliver robust, scalable, and
+                  efficient code tailored to your business needs.
+                </p>
+              </div>
 
-                <div class="form-row">
-                  <input type="text" placeholder="Phone Number*" required />
-                  <input type="text" placeholder="Subject*" required />
-                </div>
+              <!-- Card 2 -->
+              <div class="choose-card">
+                <i class="fas fa-cloud"></i>
+                <h3>Cloud Solutions</h3>
+                <p>
+                  We offer secure and reliable cloud-based services for seamless
+                  business operations and data management.
+                </p>
+              </div>
 
-                <textarea
-                  placeholder="Your Message*"
-                  rows="5"
-                  required
-                ></textarea>
+              <!-- Card 3 -->
+              <div class="choose-card">
+                <i class="fas fa-shield-alt"></i>
+                <h3>Advanced Security</h3>
+                <p>
+                  Protect your digital assets with our advanced cybersecurity
+                  strategies and continuous monitoring.
+                </p>
+              </div>
 
-                <button type="submit" class="submit-btn">Send</button>
-              </form>
+              <!-- Card 4 -->
+              <div class="choose-card">
+                <i class="fas fa-users-cog"></i>
+                <h3>Dedicated Support</h3>
+                <p>
+                  Our 24/7 dedicated support team ensures your systems run
+                  smoothly without interruptions.
+                </p>
+              </div>
+
+              <!-- Card 5 -->
+              <div class="choose-card">
+                <i class="fas fa-rocket"></i>
+                <h3>Innovation Driven</h3>
+                <p>
+                  We integrate the latest technologies and creative thinking to
+                  help your business stay ahead.
+                </p>
+              </div>
+
+              <!-- Card 6 -->
+              <div class="choose-card">
+                <i class="fas fa-chart-line"></i>
+                <h3>Proven Results</h3>
+                <p>
+                  Our track record speaks for itself — measurable growth,
+                  improved performance, and satisfied clients.
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -252,18 +319,17 @@
       <section class="contact-map-section">
         <div class="map-overlay">
           <h3>Find Us Here</h3>
-          <p>
-            Drop by our office and explore how IT Wings can elevate your
-            business.
-          </p>
+          <p>Drop by to discuss your next big project.</p>
         </div>
+
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3683.331059672643!2d88.43042317508791!3d22.573352579487955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a027564f1b6a04f%3A0xf4a6b7b09ff25a14!2sStesalit%20Tower%2C%20Sector%20V%2C%20Kolkata!5e0!3m2!1sen!2sin!4v1700000000000!5m2!1sen!2sin"
-          width="100%"
-          height="400"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3334.0706346017646!2d88.43318712475703!3d22.569078383100436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0275abf4cadad9%3A0x617148c6351331b6!2sStesalit%20Tower%2C%20GP%20Block%2C%20Sector%20V%2C%20Bidhannagar%2C%20West%20Bengal%20700091!5e1!3m2!1sen!2sin!4v1763310343660!5m2!1sen!2sin"
+          width="600"
+          height="450"
           style="border: 0"
           allowfullscreen=""
           loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
         ></iframe>
       </section>
     </main>
@@ -274,24 +340,25 @@
         <div class="container">
           <h2>Ready to work with us?</h2>
           <p>
-            Join us to experience cutting-edge digital solutions that drive
-            innovation and business transformation.
+            Join us to experience cutting-edge industrial solutions that drive
+            innovation and lasting success.
           </p>
-          <a href="contact1.html" class="btn-primary">Get in Touch</a>
+          <a href="request.html" class="btn-primary">Get in Touch</a>
         </div>
       </div>
+
       <div class="footer-main">
         <div class="container footer-grid">
           <!-- Logo & About -->
           <div class="footer-col about">
             <img
               src="images/service-banner.jpg"
-              alt="IT Wings Logo"
+              alt="ProFactory Logo"
               class="footer-logo"
             />
             <p>
-              IT Wings Webtech Solutions delivers digital innovation,
-              development, and transformation for global enterprises.
+              We are committed to providing personalized industrial solutions
+              that transform your business.
             </p>
             <div class="social-icons">
               <a href="#" target="_blank"
@@ -312,10 +379,10 @@
           <div class="footer-col">
             <h4>Quick Links</h4>
             <ul>
-              <li><a href="index1.html">Home</a></li>
-              <li><a href="about1.html">About Us</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Us</a></li>
               <li><a href="#">Blog</a></li>
-              <li><a href="service1.html">Services</a></li>
+              <li><a href="#">Services</a></li>
             </ul>
           </div>
 
@@ -326,7 +393,7 @@
               <li><a href="#">Terms & Conditions</a></li>
               <li><a href="#">Privacy Policy</a></li>
               <li><a href="#">Help</a></li>
-              <li><a href="contact1.html">Contact Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
 
@@ -334,15 +401,13 @@
           <div class="footer-col">
             <h4>Contact</h4>
             <ul class="contact-info">
-              <li><a href="tel:+911234567890">+91 1234567890</a></li>
+              <li><a href="tel:+91123654789">+91 123654789</a></li>
               <li>
-                <a href="mailto:info@itwingswebtech.com"
-                  >info@itwingswebtech.com</a
-                >
+                <a href="mailto:info@domainname.com">info@domainname.com</a>
               </li>
               <li>
                 <a href="https://goo.gl/maps/XYZ" target="_blank"
-                  >Stesalit Tower, Sector V, Kolkata</a
+                  >520, West Valley, Amin and Minim</a
                 >
               </li>
             </ul>
@@ -351,7 +416,7 @@
       </div>
 
       <div class="footer-bottom">
-        <p>&copy; 2025 IT Wings Webtech Solutions. All Rights Reserved.</p>
+        <p>&copy; 2025 IT-Wings Webtech Solutions. All Rights Reserved.</p>
       </div>
     </footer>
 
