--- a/job_des.html
+++ b/job_des.html
@@ -5,11 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job Description</title>
 
+    <!-- font awsome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- Owl Carousel CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+    />
+    <!-- aos stylesheet -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+    <!-- Toastify CSS -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
+
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/main.css" />
   </head>
+
   <body>
-    <!-- Header -->
+    <!-- header  -->
     <header>
       <nav class="nav-bar">
         <div class="container">
@@ -20,20 +48,30 @@
                   <img src="images/Baby.png" alt="logo" />
                 </figure>
               </a>
-            </div>
 
+              <div class="humberger d-none" id="humberger">
+                <i class="fa-solid fa-bars"></i>
+              </div>
+            </div>
             <div class="nav-menu">
               <ul class="d-flex al-center">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="#">Service</a></li>
-                <li><a href="career.html" class="active">Career</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li id="nav-home">
+                  <a href="index.html">Home</a>
+                </li>
+                <li id="nav-about">
+                  <a href="about.html">About Us</a>
+                </li>
+                <li id="nav-service">
+                  <a href="#">Service</a>
+                </li>
+                <li id="nav-career">
+                  <a href="career.html" class="active">Career</a>
+                </li>
+                <li><a href="#" id="nav-contact">Contact Us</a></li>
               </ul>
             </div>
-
             <div class="contact-btn">
-              <a href="contact.html">Get in touch</a>
+              <a href="request.html" target="_blank">Get in touch</a>
             </div>
           </div>
         </div>
@@ -124,6 +162,7 @@
               <li><a href="request.html">Request a Service</a></li>
               <li><a href="about.html">Know About Us</a></li>
               <li><a href="jobs.html">Join Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
               <li><a href="#">Learn With Us</a></li>
             </ul>
           </div>
@@ -131,7 +170,7 @@
       </div>
     </section>
 
-    <!-- ===== Banner ===== -->
+    <!-- Banner -->
     <section
       class="job-banner"
       style="background-image: url('images/career/career-5.jpg')"
@@ -144,8 +183,8 @@
       </div>
     </section>
 
+    <!-- Job Description -->
     <main>
-      <!-- ===== Job Description Section ===== -->
       <section class="job-description-section">
         <div class="container">
           <div class="job-content-wrapper">
@@ -210,16 +249,15 @@
                     <label>First Name *</label>
                     <input
                       type="text"
-                      required
+                      name="firstName"
                       placeholder="Enter your first name"
                     />
                   </div>
-
                   <div class="input-box">
                     <label>Last Name *</label>
                     <input
                       type="text"
-                      required
+                      name="lastName"
                       placeholder="Enter your last name"
                     />
                   </div>
@@ -228,7 +266,7 @@
                 <div class="row">
                   <div class="input-box">
                     <label>Country *</label>
-                    <select required>
+                    <select name="country">
                       <option value="">Select Country</option>
                       <option>India</option>
                       <option>USA</option>
@@ -239,7 +277,7 @@
 
                   <div class="input-box">
                     <label>Experience *</label>
-                    <select required>
+                    <select name="experience">
                       <option value="">Select Experience</option>
                       <option>Fresher</option>
                       <option>1-2 Years</option>
@@ -254,17 +292,16 @@
                     <label>Email *</label>
                     <input
                       type="email"
-                      required
+                      name="email"
                       placeholder="Enter your email"
                     />
-                    <small>(Please enter email as your username)</small>
                   </div>
                 </div>
 
                 <div class="row">
                   <div class="input-box">
                     <label>Application Type *</label>
-                    <select required>
+                    <select name="applicationType">
                       <option value="">Select Type</option>
                       <option>Full-Time</option>
                       <option>Part-Time</option>
@@ -278,17 +315,16 @@
                     <label>Skills *</label>
                     <input
                       type="text"
-                      required
+                      name="skills"
                       placeholder="Enter up to 5 skills"
                     />
-                    <small>(Example: Java, React, UI/UX)</small>
                   </div>
                 </div>
 
                 <div class="row">
                   <div class="input-box">
                     <label>Country Code *</label>
-                    <select required>
+                    <select name="countryCode">
                       <option value="">Choose</option>
                       <option>+91</option>
                       <option>+1</option>
@@ -300,7 +336,7 @@
                     <label>Mobile Number *</label>
                     <input
                       type="tel"
-                      required
+                      name="mobileNumber"
                       maxlength="10"
                       placeholder="Enter mobile number"
                     />
@@ -310,8 +346,11 @@
                 <div class="row">
                   <div class="input-box">
                     <label>Upload Resume *</label>
-                    <input type="file" required accept=".pdf,.doc,.docx,.rtf" />
-                    <small>(Allowed: .doc, .docx, .rtf, .pdf)</small>
+                    <input
+                      type="file"
+                      name="resumeFile"
+                      accept=".pdf,.doc,.docx,.rtf"
+                    />
                   </div>
                 </div>
 
@@ -334,7 +373,7 @@
             Join us to experience cutting-edge industrial solutions that drive
             innovation and lasting success.
           </p>
-          <a href="contact.html" class="btn-primary">Get in Touch</a>
+          <a href="request.html" class="btn-primary">Get in Touch</a>
         </div>
       </div>
 
@@ -411,23 +450,26 @@
       </div>
     </footer>
 
-    <!-- ===== Dynamic Job Fetch Script ===== -->
+    <!-- Toastify JS -->
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
+    <!-- Main Validation Script -->
     <script>
-      // Step 1: Read referenceNumber from URL
+      /* ------------------------------------------------------
+      Fetch Job Details from API
+    ------------------------------------------------------- */
       const urlParams = new URLSearchParams(window.location.search);
       const referenceNumber = urlParams.get("ref");
 
       if (!referenceNumber) {
-        alert("Invalid job reference number!");
+        showError("Invalid job reference number!");
       }
 
-      // Step 2: Fetch Job Details By Reference Number
-      const fetchJobDetails = async () => {
+      async function fetchJobDetails() {
         try {
           const response = await fetch(
             `http://127.0.0.1:8085/main/api/v1/job/ref/${referenceNumber}`
           );
-
           const result = await response.json();
 
           if (!result.data) {
@@ -438,34 +480,157 @@
 
           const job = result.data;
 
-          // Step 3: Fill dynamic data
           document.getElementById("jobTitle").textContent = job.jobTitle;
           document.getElementById("shortDescription").textContent =
             job.shortDescription;
           document.getElementById("fullDescription").textContent =
             job.fullDescription;
-
           document.getElementById("location").textContent = job.location;
           document.getElementById("openings").textContent = job.openings;
           document.getElementById("postedDate").textContent = job.postedDate;
           document.getElementById("expiryDate").textContent = job.expiryDate;
-
-          document.getElementById("experience").textContent =
-            job.experienceMin + " - " + job.experienceMax + " Years";
-
+          document.getElementById(
+            "experience"
+          ).textContent = `${job.experienceMin} - ${job.experienceMax} Years`;
           document.getElementById("referenceNumber").textContent =
             job.referenceNumber;
 
-          // Skills
           document.getElementById("skills").innerHTML = job.skillSet
             .map((s) => `<span>${s}</span>`)
             .join(", ");
         } catch (error) {
           console.error("Error:", error);
         }
-      };
+      }
 
       fetchJobDetails();
+
+      /* ------------------------------------------------------
+       🔥 Form Validation + Toastify Alerts
+    ------------------------------------------------------- */
+      const form = document.getElementById("applyForm");
+
+      const fields = {
+        firstName: form.querySelector("[name='firstName']"),
+        lastName: form.querySelector("[name='lastName']"),
+        country: form.querySelector("[name='country']"),
+        experience: form.querySelector("[name='experience']"),
+        email: form.querySelector("[name='email']"),
+        applicationType: form.querySelector("[name='applicationType']"),
+        skills: form.querySelector("[name='skills']"),
+        countryCode: form.querySelector("[name='countryCode']"),
+        mobileNumber: form.querySelector("[name='mobileNumber']"),
+        resumeFile: form.querySelector("[name='resumeFile']"),
+      };
+
+      function showError(message, field = null) {
+        Toastify({
+          text: message,
+          duration: 3000,
+          close: true,
+          gravity: "top",
+          position: "right",
+          backgroundColor: "#E63946",
+        }).showToast();
+
+        if (field) {
+          field.focus();
+          field.style.border = "1px solid #E63946";
+          setTimeout(() => (field.style.border = ""), 2500);
+        }
+
+        return false;
+      }
+
+      function validateEmail(email) {
+        return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
+      }
+
+      function validatePhone(num) {
+        return /^[0-9]{10}$/.test(num);
+      }
+
+      function validateFileType(file) {
+        const allowed = [
+          "application/pdf",
+          "application/msword",
+          "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
+          "application/rtf",
+        ];
+        return allowed.includes(file.type);
+      }
+
+      function validateForm() {
+        const {
+          firstName,
+          lastName,
+          country,
+          experience,
+          email,
+          applicationType,
+          skills,
+          countryCode,
+          mobileNumber,
+          resumeFile,
+        } = fields;
+
+        if (!firstName.value.trim())
+          return showError("First Name is required", firstName);
+        if (!lastName.value.trim())
+          return showError("Last Name is required", lastName);
+        if (!country.value)
+          return showError("Please select a country", country);
+        if (!experience.value)
+          return showError("Please select experience", experience);
+
+        if (!email.value.trim()) return showError("Email is required", email);
+        if (!validateEmail(email.value.trim()))
+          return showError("Invalid email format", email);
+
+        if (!applicationType.value)
+          return showError("Please select application type", applicationType);
+
+        if (!skills.value.trim())
+          return showError("Skills are required", skills);
+
+        const skillList = skills.value
+          .split(",")
+          .map((s) => s.trim())
+          .filter(Boolean);
+        if (skillList.length > 5)
+          return showError("Maximum 5 skills allowed", skills);
+
+        if (!countryCode.value)
+          return showError("Please select country code", countryCode);
+        if (!validatePhone(mobileNumber.value.trim()))
+          return showError("Enter valid 10-digit mobile number", mobileNumber);
+
+        if (resumeFile.files.length === 0)
+          return showError("Please upload your resume", resumeFile);
+
+        const file = resumeFile.files[0];
+        if (!validateFileType(file))
+          return showError("Only PDF, DOC, DOCX, RTF allowed", resumeFile);
+        if (file.size > 5 * 1024 * 1024)
+          return showError("File must be under 5MB", resumeFile);
+
+        return true;
+      }
+
+      form.addEventListener("submit", function (e) {
+        if (!validateForm()) {
+          e.preventDefault();
+        } else {
+          Toastify({
+            text: "Form submitted successfully!",
+            duration: 3000,
+            gravity: "top",
+            position: "right",
+            backgroundColor: "#27ae60",
+            close: true,
+          }).showToast();
+        }
+      });
     </script>
   </body>
 </html>
